# vendas-cli

./: .gitignore  README.md  pyproject.toml  pytest.ini  vendas_empate_teste.csv  vendas_sample.csv
src/vendas/: cli.py  core.py  output.py  parser.py
tests/: conftest.py  test_cli.py  test_core.py  test_output.py  test_parser.py
