[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vendas-cli"
version = "1.0.0"
description = "Gerador de Relatório de Vendas Avançado"
readme = "README.md"
requires-python = ">=3.7"
dependencies = []

[project.scripts]
vendas-cli = "vendas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src/vendas --cov-report=term-missing --cov-report=html"

